<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_statistics">

    <TextView
        style="@style/HeadingText"
        android:text="@string/basketball"/>

    <ListView
        android:id="@+id/basketball_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/HeadingText"
        android:text="@string/football"/>

    <ListView
        android:id="@+id/football_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/HeadingText"
        android:text="@string/rugby"/>

    <ListView
        android:id="@+id/rugby_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>